--- a/filter.html
+++ b/filter.html
@@ -46,6 +46,19 @@
 
             image.drawTo(imgcanvas);
         }
+        function makeGray() {
+            for (var pixel of image.values()) {
+            var avg = (pixel.getRed() + pixel.getGreen() + pixel.getBlue())/3;
+            pixel.setRed(avg);
+            pixel.setGreen(avg);
+            pixel.setBlue(avg);
+        }
+        var imgcanvas = document.getElementById("canvas1");
+        image.drawTo(imgcanvas);
+        }
+        function resetImage() {
+            
+        }
     </script>
 </head>
 <body>
@@ -61,6 +74,13 @@
         <input type="file" multiple="false"
         accept="image/*" id="finput"
         onchange="upload()">
+    </p>
+    <p>
+        <input type="button" value="Make Grayscale"
+        onclick="makeGray()">
+    </p>
+    <p>
+        
     </p>
 </body>
 </html>
