Fixed Canvas Issue

--- a/filter.html
+++ b/filter.html
@@ -5,8 +5,8 @@
     <title>Filter Website</title>
     <style>
         canvas {
-            width:fit-content;
-            height:fit-content;
+            max-width: 500px;
+            max-height: 250px;
             outline: black 3px solid;
             position: relative;
         }
@@ -31,6 +31,7 @@
             color:bisque;
             text-align: center;
         }
+        
 
     </style>
     <script src="https://www.dukelearntoprogram.com/course1/common/js/image/SimpleImage.js">
