--- a/filter.html
+++ b/filter.html
@@ -44,7 +44,7 @@
             var imgcanvas = document.getElementById("canvas1");
             var fileinput = document.getElementById("finput");
             image = new SimpleImage(fileinput);
-
+            
             image.drawTo(imgcanvas);
         }
         function makeGray() {
@@ -81,7 +81,7 @@
         onclick="makeGray()">
     </p>
     <p>
-        
+        Reload Webpage and upload file again to select a different filter!
     </p>
 </body>
 </html>
