--- a/filter.html
+++ b/filter.html
@@ -118,8 +118,6 @@
         <input type = "button" value = "Clear Canvas"
         onclick = "resetImage()">
     </p>
-    <p>
-        Reload Webpage and upload file again to select a different filter!
-    </p>
+    <p>Click "Clear Canvas" to clear the canvas so you can upload another image!</p>
 </body>
 </html>
